--- a/Ejercicio1.html
+++ b/Ejercicio1.html
@@ -34,8 +34,10 @@
 				alert("Hola " + nombre + " " + apellido + " " + apellido2 + ", " + " no tienes ni un año aún 🍼")
 			} else if (edad > 18) {
 				alert("Hola " + nombre + " " + apellido + " " + apellido2 + ", tienes " + edad + " años y eres mayor de edad 😎")
-			} else {
+			} else if (edad > 1 && edad <= 18) {
 				alert("Hola " + nombre + " " + apellido + " " + apellido2 + ", tienes " + edad + " años y eres menor de edad 🧐")
+			} else {
+				alert("Opción no válida, prueba de nuevo 😢")
 			}
 
 
@@ -95,8 +97,10 @@
 				alert("Hola " + nombre + " " + apellido + " " + apellido2 + ", " + " no tienes ni un año aún 🍼")
 			} else if (edad > 18) {
 				alert("Hola " + nombre + " " + apellido + " " + apellido2 + ", tienes " + edad + " años y eres mayor de edad 😎")
-			} else {
+			} else if (edad > 1 && edad <= 18) {
 				alert("Hola " + nombre + " " + apellido + " " + apellido2 + ", tienes " + edad + " años y eres menor de edad 🧐")
+			} else {
+				alert("Opción no válida, prueba de nuevo 😢 ")
 			}
 
 		
